--- a/templates/register.html
+++ b/templates/register.html
@@ -50,7 +50,7 @@
     
     <script>
         // --- IMPORTANT: CONFIGURE YOUR BACKEND URL ---
-        const BACKEND_API_BASE_URL = "http://127.0.0.1:5000";
+        const BACKEND_API_BASE_URL = "https://phantom-2-o.onrender.com";
 
         document.getElementById('register-form').addEventListener('submit', async (e) => {
             e.preventDefault();
