--- a/templates/login.html
+++ b/templates/login.html
@@ -88,7 +88,7 @@
     </div>
     
     <script>
-        const BACKEND_API_BASE_URL = "http://127.0.0.1:5000";
+        const BACKEND_API_BASE_URL = "https://phantom-2-o.onrender.com";
 
         document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
